[CURLWEB-70] Fixed padding and spacing on sponsors module

--- a/curling-main/sass/modules/blocks/_block-sponsors.scss
+++ b/curling-main/sass/modules/blocks/_block-sponsors.scss
@@ -116,6 +116,14 @@
     .cta-section.top {
       padding: 0.5rem 0;
     }
+
+    .cta-section.bottom {
+      padding-top: 0.5rem;
+
+      .cta-link {
+        line-height: 1.25rem;
+      }
+    }
   
     .cta-section {
       width: 50%;
@@ -368,11 +376,13 @@
   .block-sponsors {
     .content {
       .sponsor-container {
-        flex: 1 1 100%;
+        flex: 1 1 160px;
 
         .sponsor {
           align-self: flex-start;
           margin-left: 1.1rem;
+          width: 150px;
+          height: 150px;
         }
       }
     }
